# siahato

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/sampledata/models/: car_02.sfa
app/src/androidTest/java/com/example/miyatama/siahato/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/miyatama/siahato/: CcbyActivity.kt  MainActivity.kt  ShiahatoActivity.kt  Siahato.kt
app/src/main/res/layout/: activity_ccby.xml  activity_main.xml  activity_siahato.xml
app/src/main/res/raw/: car_02.sfb
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/miyatama/siahato/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary344/: build.gradle
